--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "chart.js": "^3.6.0",
+    "chartjs-adapter-date-fns": "^1.1.0-beta.1",
+    "chartjs-chart-financial": "^0.1.1",
+    "date-fns": "^2.29.3",
+    "ng2-charts": "^4.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
